--- a/css/release.css
+++ b/css/release.css
@@ -48,23 +48,7 @@
 
     width: 20em;
 }
-#description
-{
-    width: 18em;
-    height: 15em;
-    overflow-x: hidden;
-    overflow-y: scroll;
-    line-height: 30px;
-    text-align: left;
-}
-#description::-webkit-scrollbar {
-    display: none;
-}
-#price
-{
-    font-size: 2em;
-    margin-bottom: 0.6em;
-}
+
 #middle2 table
 {
     /*font-family:"Trebuchet MS", Arial, Helvetica, sans-serif;*/
@@ -223,4 +207,34 @@
     outline: 0;
     -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6);
     box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6)
+}
+#description{
+    outline-style: none ;
+    border: 0.1em solid #ccc;
+    border-radius: 0.1em;
+    padding: 0.5em 0.5em;
+    width: 20em;
+    height:6em;
+    overflow-x: hidden;
+    overflow-y: scroll;
+}
+#description::-webkit-scrollbar {
+    display: none;
+}
+
+#description:focus{
+    border-color: #66afe9;
+    outline: 0;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6)
+}
+
+#file
+{
+    margin:0;
+    padding:0;
+    filter:alpha(opacity=0);
+    opacity:0;
+    width: 0;
+    height: 0;
 }
